--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>#mainclasspackage</mainClass>
+                            <mainClass>pl.patrycja.ox.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
