Changes after code review. Changed Main class name, added new class to set game gettings. Added method to ConsoleUI to get input from user. Added method to Judge class to check if game settings are correct.

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>pl.patrycja.ox.Main</mainClass>
+                            <mainClass>pl.patrycja.ox.Game</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
