--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,25 @@
         <maven.compiler.realase>${project.java.version}</maven.compiler.realase>
         <plugin.compiler.version>3.8.0</plugin.compiler.version>
         <plugin.enforcer.version>3.0.0-M3</plugin.enforcer.version>
+        <plugin.jar.version>3.2.0</plugin.jar.version>
         <dependency.testng>7.0.0</dependency.testng>
+        <dependency.mockito>3.0.0</dependency.mockito>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${dependency.testng}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${dependency.mockito}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -53,7 +70,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>${plugin.jar.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -65,20 +82,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${dependency.testng}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>3.0.0</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
 </project>
