Added automatic tests. To run automatic tests it is needed to change return type in method setUI in class UIFactory to FileUI.

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>pl.patrycja.ox.TicTacToe</mainClass>
+                            <mainClass>pl.patrycja.ox.gameflow.TicTacToe</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
