--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>pl.patrycja.ox.gameflow.TicTacToe</mainClass>
+                            <mainClass>pl.patrycja.ox.gameflow</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
